--- a/es/docker-compose.yaml
+++ b/es/docker-compose.yaml
@@ -5,12 +5,8 @@ services:
     image: docker.elastic.co/elasticsearch/elasticsearch:${ELK_VERSION}
     restart: always
     volumes:
-      - type: bind
-        source: ./config/elasticsearch.yml
-        target: /usr/share/elasticsearch/config/elasticsearch.yml
-      - type: volume
-        source: elasticsearch
-        target: /usr/share/elasticsearch/data
+      - ./config/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml
+      - elasticsearch:/usr/share/elasticsearch/data
     ports:
       - "9200:9200"
       - "9300:9300"
@@ -24,10 +20,7 @@ services:
   kibana:
     image: docker.elastic.co/kibana/kibana:${ELK_VERSION}
     volumes:
-      - type: bind
-        source: ./config/kibana.yml
-        target: /usr/share/kibana/config/kibana.yml
-        read_only: true
+      - ./config/kibana.yml:/usr/share/kibana/config/kibana.yml
     ports:
       - "5601:5601"
     depends_on:
