--- a/es/docker-compose.yaml
+++ b/es/docker-compose.yaml
@@ -3,6 +3,7 @@ version: '3.7'
 services:
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:${ELK_VERSION}
+    container_name: elasticsearch
     restart: always
     volumes:
       - ./config/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml
@@ -19,6 +20,7 @@ services:
   
   kibana:
     image: docker.elastic.co/kibana/kibana:${ELK_VERSION}
+    container_name: kibana
     volumes:
       - ./config/kibana.yml:/usr/share/kibana/config/kibana.yml
     ports:
