--- a/jaeger/docker-compose.yaml
+++ b/jaeger/docker-compose.yaml
@@ -3,7 +3,7 @@ version: "3.7"
 services:
   jaeger-collector:
     image: jaegertracing/jaeger-opentelemetry-collector:latest
-    command: []
+    container_name: "jaeger_collector"
     restart: always
     environment:
       SPAN_STORAGE_TYPE: elasticsearch
@@ -14,3 +14,26 @@ services:
       # Admin and healthz
       - 14269:14269
 
+  jaeger-agent:
+    image: jaegertracing/jaeger-opentelemetry-agent:latest
+    container_name: "jaeger_agent"
+    restart: always
+    command: ["--reporter.grpc.host-port=jaeger-collector:14250"]
+    ports:
+      - 5775:5775/udp
+      - 6831:6831/udp
+      - 6832:6832/udp
+      - 5778:5778/tcp
+
+  jaeger-query:
+    image: jaegertracing/jaeger-agent:latest
+    container_name: "jaeger_query"
+    restart: always
+    environment:
+      SPAN_STORAGE_TYPE: elasticsearch
+      ES_SERVER_URLS: http://elastic:elastic@host.docker.internal:9200
+    ports:
+      # Query UI
+      - 16686:16686
+      # Admin
+      - 16687:16687
